--- a/src/main/resources/templates/addbook.html
+++ b/src/main/resources/templates/addbook.html
@@ -34,9 +34,9 @@
 					<label for="price">Price</label> <input type="text" class="form-control" id="price" th:field="*{price}" />
 				</div>
 
-				<label for="catlist">Category</label> <select id="catlist" th:field="*{category.categoryid}" class="form-control">
+				<label for="catlist">Category</label> <select id="catlist" th:field="*{category.categoryId}" class="form-control">
 
-					<option th:each="cat: ${categories}" th:value="${cat.categoryid}" th:text="${cat.name}"></option>
+					<option th:each="cat: ${categories}" th:value="${cat.categoryId}" th:text="${cat.name}"></option>
 
 				</select> 
 				<input class="btn btn-outline-dark" type="submit" value="Save"></input> 
