--- a/src/main/resources/templates/modifybook.html
+++ b/src/main/resources/templates/modifybook.html
@@ -51,10 +51,10 @@
 				</div>
 
 				<label for="catlist">Category</label>
-				<select id="catlist" th:field="*{category.categoryid}"
+				<select id="catlist" th:field="*{category.categoryId}"
 					class="form-control">
 
-					<option th:each="cat: ${categories}" th:value="${cat.categoryid}"
+					<option th:each="cat: ${categories}" th:value="${cat.categoryId}"
 						th:text="${cat.name}"></option>
 
 				</select>
